--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,23 @@
-# Dependencies
-node_modules/
-backend/node_modules/
-frontend/node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Environment variables
-.env
-backend/.env
-frontend/.env
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Build
-frontend/build/
-backend/dist/
+# testing
+/coverage
 
-# Logs
-*.log
-npm-debug.log*
+# production
+/build
 
-# OS
+# misc
 .DS_Store
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Docker
-docker-compose.override.yml
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
