--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+backend/node_modules/
+frontend/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Environment
+.env
+backend/.env
+frontend/.env
 
-# testing
-/coverage
+# Build
+frontend/build/
+backend/dist/
 
-# production
-/build
+# Logs
+*.log
 
-# misc
+# OS
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+Thumbs.db
