--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,15 @@
-# Dependencies
 node_modules/
 backend/node_modules/
 frontend/node_modules/
 
-# Environment
 .env
 backend/.env
-frontend/.env
-
-# Build
-frontend/build/
-backend/dist/
-
-# Logs
 *.log
-
-# OS
 .DS_Store
 Thumbs.db
+.vscode/
+.idea/
+*.swp
+*.swo
+
+docker-compose.override.yml
